Define `uv` version in `pyproject.toml`

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install UV
         uses: astral-sh/setup-uv@v6
         with:
-          version: ">=0.6.0"
+          version-file: "pyproject.toml"
 
       - name: Build package
         run: |
