--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,7 +27,7 @@ jobs:
         uses: astral-sh/setup-uv@v6
         with:
           enable-cache: true
-          version: ">=0.6.0"
+          version-file: "pyproject.toml"
 
       - name: Install dependencies
         run: uv sync --all-extras --frozen
