Simplify and rebuild Docker ignores for the new Docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,7 @@
-# project build medadata that can't be used in docker
-Dockerfile
-.appveyor.yml
-.dockerignore
-.pre-commit-hooks.yaml
-.travis.yml
-.git*
+# Ignore everything ...
+*
 
-# documentation not needed
-CHANGELOG.md
-LICENSE
-MANIFEST.in
-.undertake
-example.gif
-logo.png
-art/
-docs/
+# ... except:
+!isort
+!pyproject.toml
+!README.md
