--- a/tox.ini
+++ b/tox.ini
@@ -55,11 +55,11 @@ dependency_groups =
 commands =
     cruft check
     mypy -p isort -p tests
-    black --target-version py310 --check .
     isort --profile hug --check --diff isort/ tests/
     isort --profile hug --check --diff example_isort_formatting_plugin/
     isort --profile hug --check --diff example_isort_sorting_plugin/
     isort --profile hug --check --diff example_shared_isort_profile/
     flake8 isort/ tests/
     ruff check
+    ruff format --check
     bandit -r isort/ -x isort/_vendored
