feat!: remove old finders flag and legacy finder logic
- Remove old-finders flag and config option
- Remove related dependencies (pip_api and pipreqs)
- Update tests and docs

Closes #2445

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ dependency_groups =
 depends =
     py{3.14, 3.13, 3.12, 3.11, 3.10}: coverage_erase
 commands =
-    coverage run -m pytest tests/unit/ -s --ignore=tests/unit/test_deprecated_finders.py
+    coverage run -m pytest tests/unit/ -s
 
 
 [testenv:coverage_report{,-ci}]
