chore: check scripts folder on lint job

--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ dependency_groups =
 commands =
     cruft check
     mypy -p isort -p tests
-    isort --profile hug --check --diff isort/ tests/
+    isort --profile hug --check --diff isort/ tests/ scripts/
     isort --profile hug --check --diff example_isort_formatting_plugin/
     isort --profile hug --check --diff example_isort_sorting_plugin/
     isort --profile hug --check --diff example_shared_isort_profile/
